[package]
name = "white-balance"
version = "0.1.0"
authors = ["Thijs Vermeir <thijsvermeir@gmail.com>"]
description = "Rust implementation of white balance methods"
homepage = "https://github.com/lovebug356/white-balance-rs"
repository = "https://github.com/lovebug356/white-balance-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["image", "processing", "multimedia"]

[dependencies]
num-traits = "0.1.32"
image = "0.17.0"
clap = "2.27.1"
nalgebra = "0.10.1"
num = "0.1.40"
rand = "0.3.17"

[badges]
travis-ci = { repository = "lovebug356/white-balance-rs", branch = "master" }
